--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+        <link rel='shortcut icon' href='favicon.ico' />
+
     </head>
 <body>
 	
