--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="Cache-control" content="public">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Nothing Site</title>
         <meta name="description" content="Nothing site is clean and flat interface to do nothing.">
