google search console

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <title>Nothing Site</title>
         <meta name="description" content="Nothing site is clean and flat interface to do nothing.">
         <meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+		    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <meta name="google-site-verification" content="TGs-qOl8tCHWmNN8N57m6vee1nBgnYfCKGCrRjIGRS4" />
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
